# TextOp

./: .gitignore  DATASET.md  README.md  USAGE.md
TextOpRobotMDAR/: .gitignore  pyproject.toml
TextOpRobotMDAR/robotmdar/: cli.py
TextOpRobotMDAR/robotmdar/config/: base.yaml  vis_mvae.yaml
TextOpRobotMDAR/robotmdar/config/data/: babel.yaml
TextOpRobotMDAR/robotmdar/config/denoiser/: def.yaml  mlp.yaml
TextOpRobotMDAR/robotmdar/config/diffusion/: def.yaml
TextOpRobotMDAR/robotmdar/config/skeleton/: g1.yaml
TextOpRobotMDAR/robotmdar/config/train/: dar.yaml
TextOpRobotMDAR/robotmdar/config/vae/: def.yaml
TextOpRobotMDAR/robotmdar/dataloader/: data.py
TextOpRobotMDAR/robotmdar/diffusion/: resample.py
TextOpRobotMDAR/robotmdar/dtype/: abc.py  device.py  logger.py  motion.py  seed.py  vis_mjc.py
TextOpRobotMDAR/robotmdar/eval/: loop_dar.py  vis_mvae.py
TextOpRobotMDAR/robotmdar/model/: clip.py  mld_denoiser.py  mld_vae.py  modules.py
TextOpRobotMDAR/robotmdar/model/operator/: cross_attention.py  position_encoding.py
TextOpRobotMDAR/robotmdar/train/: manager.py  train_dar.py  train_mvae.py
TextOpTracker/source/textop_tracker/textop_tracker/tasks/tracking/: tracking_env_cfg.py
TextOpTracker/source/textop_tracker/textop_tracker/tasks/tracking/config/g1/agents/: rsl_rl_ppo_cfg.py
TextOpTracker/source/textop_tracker/textop_tracker/tasks/tracking/mdp/: commands_multi.py  events.py  rewards.py  terminations.py
assets/: .gitignore  amass  create_symbolic_link_in_GMR.sh  download_amass.py  download_amass_smplh.py  download_amass_smplh2x.py  lafan1  rearrange_amass_folder.sh
dataset/: motion_package.py  pack_dataset.py  process_retarget_data.py  smplx_to_robot_dataset.py
description/robots/cfg/robot/: unitree_g1_29dof_anneal_23dof.yaml
description/robots/g1/: g1_23dof_lock_wrist.urdf  phc_g1_23dof.yaml
